Use Stream.toList() for resolveBcc result
Replaces collect(Collectors.toList()) with the immutable Stream.toList(),
so resolveBcc consistently returns an unmodifiable list.